# docs/swagger.json
@@ -2387,6 +2387,9 @@
                 "email": {
                     "type": "string"
                 },
+                "full_name": {
+                    "type": "string"
+                },
                 "system_role": {
                     "type": "string",
                     "enum": [
@@ -2865,9 +2868,6 @@
                         "USER",
                         "SUPER_ADMIN"
                     ]
-                },
-                "username": {
-                    "type": "string"
                 }
             }
         },
